PSR-0 autoload the classes folder via Composer plz

--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,10 @@
 	"dist": {
 		"url": "https://github.com/barrykooij/post-connector-core/archive/master.zip",
 		"type": "zip"
+	},
+	"autoload": {
+		"classmap": [
+            "classes/",
+		]
 	}
 }
